Revision history for SPVM
0.9600_01  2022-05-25

0.96  2022-05-25
        [CHANGE]
        * This is major version up from 0.95xx. SPVM language becomes a little more stable in my opinion.
        * Support die statement without the operand again. This was remove at 0.9504(2021-02-10).
          die;
        * Add Fn->match method
        * Simplify the compilation error messages of the character literal
        * Support brace in the hexadecimal escape character
          
          '\x{A}'
          '\x{6A}'
          "Foo \x{A} Bar"
          
        * Support single character in the hexadecimal escape character
        
          '\xA'
          "Foo \xA Bar"
        * Improve the compilation error message of the Unicode escape character.
        * Add the "cap1", "cap2", "cap3", "cap4", "cap5", "cap6", "cap7", "cap8", "cap9", "cap10" methods
          to Regex class. These are corresponding to Perl's $1, $2, $3 ... $10.
        * Improve the compilation error messages of variable expansion.
        [BUG FIX]
        * Fix bug that Regex don't work well in the following case.
          my $result = Fn->replace("xyzAAAxyzAAA", "A+", "BBB", "g");
        * Fix the bug that variable expansion doesn' support the arrow between braces or brackets such as "$minimals->[1]->{x}".
          
        [SPECIFICATION FIX]
        * Add string literal escape character \$
        * Hexadecimal escape charcter represents any value of byte type

        [NON BACKWORD COMPATIBLE CHANGES]
        * The unicode copde point of Unicode escape character must be a Unicode scalar value.
        
0.9517  2022-05-19
        [CHANGE]
        * Numeric literal error messages.
        * Add "is_unicode_scalar_value" method to Unicode module.
        * Add "chr" method to Fn module.
        * Add "ord" method to Fn module.
        * Add "%lx" specifier to Fn->sprintf method.
        * Add "%lX" specifier to Fn->sprintf method.
        * Support any precision of %f of Fn->sprintf.