@@ -28,7 +28,16 @@ class TestCase::Lib::ByteList {
     
     # new with undef
     {
-      my $list = ByteList->new(undef);
+      my $list = ByteList->new((byte[])undef);
+      
+      unless ($list->length == 0) {
+        return 0;
+      }
+    }
+
+    # new without argument
+    {
+      my $list = ByteList->new;
       
       unless ($list->length == 0) {
         return 0;
